--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "⚡ FastAPI",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/.venv/bin/uvicorn",
-            "args": [
-                "src.bean_counter.main:app",
-                "--port",
-                "7998",
-                "--reload"
-            ],
-            "jinja": true,
-            "justMyCode": true
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "⚡ FastAPI",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/.venv/bin/uvicorn",
+      "args": ["src.bean_counter.main:app", "--port", "7998", "--reload"],
+      "jinja": true,
+      "justMyCode": true
+    },
+    {
+      "name": "🧪 pytest",
+      "type": "python",
+      "request": "launch",
+      "justMyCode": false,
+      "program": "${workspaceFolder}/.venv/bin/pytest",
+      "console": "integratedTerminal",
+      "env": {},
+      "args": []
+    }
+  ]
 }
