wip models, test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add a short description here"
 authors = [
     { name = "Jon Whittlestone", email = "dev@howapped.com" }
 ]
-dependencies = ["jupyterlab~=4.0.0", "uvicorn~=0.22.0", "fastapi~=0.95.2", "httpie~=3.2.2", "pytest~=7.3.1", "pytest-asyncio~=0.21.0", "httpx~=0.24.1", "asgi-lifespan~=2.1.0"]
+dependencies = ["jupyterlab~=4.0.0", "uvicorn~=0.22.0", "fastapi~=0.95.2", "httpie~=3.2.2", "pytest~=7.3.1", "pytest-asyncio~=0.21.0", "httpx~=0.24.1", "asgi-lifespan~=2.1.0", "gspread~=5.9.0"]
 readme = "README.md"
 requires-python = ">= 3.10"
 
